Push update to 3 countries
- ron failed ['modules']
- ukr failed ['modules']
- afg failed []

--- a/translations/parent_text_crisis_afghanistan/en/afg_navigation.pot
+++ b/translations/parent_text_crisis_afghanistan/en/afg_navigation.pot
@@ -264,12 +264,17 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "You have completed the programme. Well done!"
+msgid "You’ve completed the programme – well done!"
 msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Remember, you can always return to ParentText to review these tips. Just type {MENU}."
+msgid "Remember, you can always return to {prog_name} to review any of the tips. Just type {MENU}."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "We’ll check in with you in a month to see how you’re doing. Your feedback helps us make sure these tips truly support families like yours 🙂"
 msgstr ""
 
 #. type=text
