update WVI translations

--- a/translations/parent_text_crisis_afghanistan/en/afg_modules.pot
+++ b/translations/parent_text_crisis_afghanistan/en/afg_modules.pot
@@ -194,7 +194,12 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Here are some regular activities you might want to try to do with your children:\r\rEat one meal together"
+msgid "Here are some regular activities you might want to try to do with your children:"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Eat one meal together"
 msgstr ""
 
 #. type=text
@@ -594,7 +599,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid " Let Your child share with you what they need. Avoid criticism."
+msgid " Let your child share with you what they need. Avoid criticism."
 msgstr ""
 
 #. type=text
@@ -604,7 +609,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Tell Your child that you are believe them and are there for them."
+msgid "Tell your child that you believe them and are there for them."
 msgstr ""
 
 #. type=text
@@ -1165,6 +1170,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "Press ▶️ to watch a video to practise taking a pause together"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Press ▶️ to listen to an audio and practise taking a pause together"
 msgstr ""
 
 #. type=text
