Update source file main.pot

--- a/translations/facilitator_app_malaysia/en/main.pot
+++ b/translations/facilitator_app_malaysia/en/main.pot
@@ -219,22 +219,22 @@ msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
+msgid ""
+"Just as we say to the parents, “It is what you do at home that makes the difference,” the same thing applies to you: “It is how you interact with the parents in your group that makes the difference.” \n"
+"\n"
+"If you take the time to deliver a session before it begins, you will be more confident. If there is anything that you cannot remember or feel unsure of, contact another facilitator to practise with. \n"
+"\n"
+"Access the Facilitator Guide for your group by clicking on the icon above. ."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
 msgid "What’s inside the Facilitator Guide?"
 msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
-msgid "This is a comprehensive guide to help you deliver the programme to parents with confidence. It includes guidance on how to introduce the programme, specific instructions on how to deliver each session, and tips on how to support parents throughout."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "What’s inside the Companion Guide?"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "This guide is to support you as you support parents! It includes information and guidance to help you learn and grow as a facilitator, and information on core skills that parents learn on NKText."
+msgid "This guide is for YOU! It is a comprehensive guide to help you deliver Naungan Kasih to families around you. It includes steps on how to introduce caregivers to the programme, and support them, and specific information on the programme’s content."
 msgstr ""
 
 #. type=data_list
@@ -245,7 +245,7 @@ msgstr ""
 #. type=data_list
 msgctxt "data_list"
 msgid ""
-"It is important to follow the manuals as closely as possible. However, manuals are only a guide to support you after what you have learned in the training workshop. \n"
+"It is important to follow this manual as closely as possible. However, manuals are only a guide to support you after what you have learned in the training workshop. \n"
 "Remember, HOW you facilitate matters most. Delivering the content is only about 20% of the programme’s success. The other 80% depends on HOW you facilitate–your attitude, your empathy, and how you connect with and support parents throughout their journey."
 msgstr ""
 
@@ -269,7 +269,9 @@ msgctxt "data_list"
 msgid ""
 "Just as we say to the parents, “It is what you do at home that makes the difference,” the same thing applies to you: “It is how you interact with the parents in your group that makes the difference.” \n"
 "\n"
-"If you take the time to deliver a session before it begins, you will be more confident. If there is anything that you cannot remember or feel unsure of, contact another facilitator to practise with."
+"If you take the time to deliver a session before it begins, you will be more confident. If there is anything that you cannot remember or feel unsure of, contact another facilitator to practise with. \n"
+"\n"
+"Access the Facilitator Guide for your group by clicking on the icon above."
 msgstr ""
 
 #. type=data_list
@@ -768,6 +770,16 @@ msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
+msgid "Supporting positive child behaviour"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "Keeping the child safe and healthy"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
 msgid "Identifying Group Admin"
 msgstr ""
 
@@ -1108,13 +1120,15 @@ msgid ""
 "Welcome to the Naungan Kasih Positive Parenting Programme! \n"
 "\n"
 "Thank you for your commitment and dedication to supporting children and families in your community. \n"
-"\n"
-"Before you begin, ensure that you have read both the Facilitator Guide and the Companion Guide. Use them together to help you deliver the programme with confidence!"
+"You are a shining star!"
 msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
-msgid "The Onboarding Session sets the tone for the entire Naungan Kasih programme. It is important to create a space that is welcoming and safe for the participants to feel at ease and familiarise themselves with the programme."
+msgid ""
+"The Onboarding Session sets the tone for the entire Naungan Kasih programme. It is important to create a space that is welcoming and safe for the participants to feel at ease and familiarise themselves with the programme.\n"
+"\n"
+"Access the Facilitator Guide for your group by clicking on your Group Name icon below."
 msgstr ""
 
 #. type=data_list
@@ -1337,6 +1351,22 @@ msgid ""
 "Consequences are most effective when used to support following instructions or household rules and routines that have already been discussed with children.\n"
 "\n"
 "Here are some common challenges and possible solutions for giving consequences.\n"
+"\n"
+"You can share the following messages as responses during your weekly chat when parents share challenges with this topic."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"Here are some common challenges and possible solutions for supporting positive child behaviour. \n"
+"\n"
+"You can share the following messages as responses during your weekly chat when parents share challenges with this topic."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"Here are some common challenges and possible solutions for keeping children safe and healthy. \n"
 "\n"
 "You can share the following messages as responses during your weekly chat when parents share challenges with this topic."
 msgstr ""
@@ -2654,6 +2684,160 @@ msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
+msgid "Other members of the family do not agree about using ignore for tantrums or other demanding behaviours."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"🚩 Sometimes others will not agree with us or have other methods of parenting. \n"
+"\n"
+"💡 It might be helpful to explain to other family members how to use ignore and why it might help reduce your children’s demanding behaviours. \n"
+"\n"
+"✨ You can only control your behaviour so remember that these changes start with you and with time others might see that they really work!"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "I can’t ignore my child’s behaviour because they are hitting/biting/pushing."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"🔑 Ignore only works for negative attention seeking and demanding behaviours like whining, pestering, and tantrums.\n"
+"\n"
+"Using consequences is more effective for aggressive behaviours like hitting. Your child might need a break from an activity to cool down if they are being aggressive. \n"
+"\n"
+"⏸ You can teach them to Take a Pause!"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "I can’t ignore my child’s behaviour because I am afraid they will hurt themselves."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"❗It is important to keep your child safe. If they get out of control during a tantrum, you might need to take them to a place where they cannot hurt themselves. \n"
+"\n"
+"You also might need to gently but firmly hold your child while continuing to ignore them verbally. \n"
+"\n"
+"Remember that we are ignoring the behaviour but not the child!"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "Ignoring the behaviour just seems to make it worse!"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"👀 It is completely natural for your child to test you. They have learned that by increasing their demanding behaviour they might get what they want. \n"
+"\n"
+"💚 Be patient and continue to practise ignoring. Eventually, your child will learn that this behaviour does not work."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "I am having to ignore my child’s behaviour a lot of the time. It just does not work!"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"This may be either because 1️⃣ you are not being consistent with ignoring, 2️⃣ the behaviour is not one that you can ignore, or 3️⃣ your child needs more positive attention at other times. \n"
+"\n"
+"Remember to spend plenty of One-on-One Time with your children."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "My child is always on a gadget, even when I am working or doing house chores."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"📺 It must be exhausting to always tell your child to turn off or put away the gadgets.\n"
+"\n"
+"📝 You can set rules with your child. Tell them that they cannot be on gadgets when you are busy. Your busy time is your child’s quiet play time with toys or reading time with books.\n"
+"\n"
+"🌷 Tell your child that sharing what they watch on T.V. or what they do on gadgets is a rule. \n"
+"\n"
+"👂 Be patient and kind while listening to them. Manage your anger if you find that they did something wrong online. Take a deep breath.\n"
+"\n"
+"💛 Praise your child when they follow the rules!"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "My child is refusing to eat vegetables and fruits, especially when they are out of the house."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"🍅 It is common for children to refuse vegetables and fruits, especially when tastier but less healthy food options are available all around us.\n"
+"\n"
+"🌱 You could encourage your child to eat slightly sweeter fruits and vegetables for a start, such as mango childs and sweet potatoes. You can gradually introduce other vegetables and fruits.\n"
+"\n"
+"🎈 Praise you child even when they take one mouthful of vegetables or fruits!"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "I am worried because my child returns home late at night after playing."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"🚩 I understand it can be unsafe when your child comes home late after playing outside.\n"
+"\n"
+"⏰ Consider establishing a household rule for when your child should come home. Work together with your child to set fair consequences if they don't follow the rule.\n"
+"\n"
+"💚 To support you in setting rules with your child, think about making \"Give My Child Structure\" your next parenting goal once you complete your current one."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "My child told me that school or the house of someone I trust is an unsafe place. 🚩 I was shocked and did not know what to do!"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"😔 It is shocking to learn that people who we trust may cause discomfort to our children.\n"
+"\n"
+"👂 Listen to your child if they want to talk about why it seems dangerous or uncomfortable. Trust what they say - they will not say such things for no reason!\n"
+"\n"
+"🔔 Talk with someone and get support. Type {HELP} if you need more assistance.\n"
+"\n"
+"💙 Remember to take a pause when you are stressed."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "I am shy to talk to my young child about bodies and safe touch."
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid ""
+"💙 It is slightly uncomfortable to talk to our children about male and female body parts.\n"
+"\n"
+"💡But it helps to keep our children safe. Your child will know that they can come to you about any questions related to the body.\n"
+"\n"
+"💚 While it may be uncomfortable to talk about some body parts, especially private parts, your child will know how to talk about it if anything happens.\n"
+"\n"
+"🔑 Answer any questions from your child honestly. You can do this to keep our children safe! 🌷"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
 msgid "test"
 msgstr ""
 
@@ -3088,12 +3272,6 @@ msgstr ""
 #. type=template
 msgctxt "template"
 msgid "Add Parent to Group"
-msgstr ""
-
-#. type=template
-#. The string @item.co_parent_name should not be translated.
-msgctxt "template"
-msgid "Co-parent: @item.co_parent_name"
 msgstr ""
 
 #. type=template
