--- a/translations/parent_text_v2_mexico/en/additional_modules.pot
+++ b/translations/parent_text_v2_mexico/en/additional_modules.pot
@@ -4777,17 +4777,17 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "{F1_FATHER}: Let me put your shoes on"
+msgid "{F1_FATHER}: I notice you haven’t put your shoes on, I'm here if you need help."
 msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "{F1_DAUGHTER_6}: No, I want to do it myself!"
+msgid "{F1_DAUGHTER_6}: No, I will try!"
 msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "{F1_FATHER} Okay, {F1_DAUGHTER_6}, you can do it yourself."
+msgid "{F1_FATHER} Okay, {F1_DAUGHTER_6}!"
 msgstr ""
 
 #. type=text
@@ -7422,6 +7422,17 @@ msgstr ""
 #. type=text
 #. Strings like @fields.xxx and @results.yyy should not be translated. 
 msgctxt "text"
+msgid "❗ Confronting the person who did it often makes it worse, so it is better to help @fields.child_nickname stay away from the person and report them to the clinic or an institution you trust."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "❗ Confronting the person who did it often makes it worse, so it is better to help your {child} stay away from the person and report them to the clinic or an institution you trust."
+msgstr ""
+
+#. type=text
+#. Strings like @fields.xxx and @results.yyy should not be translated. 
+msgctxt "text"
 msgid "▶️ Press play to learn 4️⃣ four tips to help you teach @fields.child_nickname about safe and unsafe touch and what to do if they feel unsafe when someone touches them. 💛\r\r1️⃣ **LEARN ABOUT PRIVATE PARTS**"
 msgstr ""
 
@@ -7836,17 +7847,6 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "{F3_DAUGHTER_7}: Thank you, Mom. I’m glad I can tell you about these things."
-msgstr ""
-
-#. type=text
-#. Strings like @fields.xxx and @results.yyy should not be translated. 
-msgctxt "text"
-msgid "❗ Confronting the person who did it often makes it worse, so it is better to help @fields.child_nickname stay away from the person and report them to the clinic or an institution you trust."
-msgstr ""
-
-#. type=text
-msgctxt "text"
-msgid "❗ Confronting the person who did it often makes it worse, so it is better to help your {child} stay away from the person and report them to the clinic or an institution you trust."
 msgstr ""
 
 #. type=text
@@ -9469,7 +9469,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "You are not alone! Mothers, fathers and caregivers all over the world say they worry about keeping their children safe."
+msgid "You are not alone! Mothers, fathers and caregivers all over the world say they worry about keeping their teens safe."
 msgstr ""
 
 #. type=text
@@ -9700,11 +9700,6 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Let’s try another. What are the warning signs?"
-msgstr ""
-
-#. type=text
-msgctxt "text"
 msgid "Teacher: \"{F2_DAUGHTER_17}, if you want to get good grades this year, you need to stay after school when everyone is gone so I can tutor you.\""
 msgstr ""
 
@@ -9716,6 +9711,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "Teacher: \"No, this will be our secret. You don’t want people to think you can't handle your studies, right?\""
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Let’s try another. What are the warning signs?"
 msgstr ""
 
 #. type=text
@@ -9877,7 +9877,12 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "This lesson is about learning how to respond to crises when they happen. ❗\r\rThis lesson talks about sexual abuse. It is normal to feel uncomfortable or upset when talking about sexual abuse. Remember to take a deep breath. If you need, you can also talk to someone you trust for support."
+msgid "This lesson is about learning how to respond to crises when they happen. ❗"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "This lesson talks about sexual abuse. It is normal to feel uncomfortable or upset when talking about sexual abuse. Remember to take a deep breath. If you need, you can also talk to someone you trust for support."
 msgstr ""
 
 #. type=text
@@ -10122,6 +10127,11 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "This lesson is about learning how to respond to crises when they happen. ❗\r\rThis lesson talks about sexual abuse. It is normal to feel uncomfortable or upset when talking about sexual abuse. Remember to take a deep breath. If you need, you can also talk to someone you trust for support."
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "{F2_GRANDMOTHER}: \"{F2_DAUGHTER_17} my dear, you look really upset, do you want to tell me what happened?\""
 msgstr ""
 
@@ -10240,6 +10250,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "Keeping your {teen} safe online is an important step to help them be part of the digital world. 📱"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "We are going to learn 4️⃣ tips to keep your {teen} safe online: "
 msgstr ""
 
 #. type=text
@@ -10379,6 +10394,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "Lesson complete! You have learnt the importance of building safe online habits, and trust."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "You already learned ways to protect your teen online with 1️⃣ LEARN and 2️⃣ PROTECT in the previous lesson."
 msgstr ""
 
 #. type=text
@@ -11022,7 +11042,17 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "{F2_GRANDMOTHER} is the only caregiver for her two grandchildren. Household duties, getting older, and having little money often make her feel overwhelmed and un-supported. It is also difficult for her to be present with her children. Let’s see how she responds to her {F2_DAUGHTER_17}, who is upset about an argument with a friend at school…."
+msgid "True or False: Too much stress can have a negative impact on our relationships with others, including our teens."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Too much stress can make you more aggressive, irritable and less patient with your teens. "
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "{F2_GRANDMOTHER} is the only caregiver for her two grandchildren. Household duties, getting older, and having little money often make her feel overwhelmed and un-supported. It is also difficult for her to be present with her teens. Let’s see how she responds to her {F2_DAUGHTER_17}, who is upset about an argument with a friend at school…."
 msgstr ""
 
 #. type=text
@@ -11128,6 +11158,11 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "{F1_FATHER}: Hmm.. this is too much to do. What is most important out of this? Helping my teen is most important. Bills are not due until later this week, and I can clean on some other day."
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "{F1_FATHER}:  I’ll spend 10 minutes cleaning the kitchen so I’m relaxed while making dinner, but I’ll save more cleaning for another day.  I’ll make a note for myself to pay the bill tomorrow afternoon so I don’t forget!"
 msgstr ""
 
@@ -11159,6 +11194,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "True or False: It is okay to shout and yell at my teen when angry."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "When we react with anger most of the time, it may cause our teens to feel scared of them, feel stressed, misbehave more or behave aggressively."
 msgstr ""
 
 #. type=text
@@ -11322,6 +11362,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "Our teens are more likely to follow instructions when they are told what to do instead of what not to do. "
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "💙 Negative instructions like, “Don’t do that!” can make teens (and us) feel confused. 😣"
 msgstr ""
 
 #. type=text
@@ -11895,7 +11940,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Caregivers and children all have a role to play in the household. 📝 "
+msgid "Caregivers and teens all have a role to play in the household. 📝 "
 msgstr ""
 
 #. type=text
@@ -12227,7 +12272,7 @@ msgstr ""
 #. type=text
 #. Strings like @fields.xxx and @results.yyy should not be translated. 
 msgctxt "text"
-msgid "Press Play ▶️to 5️⃣tips on how to help @fields.child_nickname think positively about themselves: "
+msgid "Press Play ▶️to 4️⃣ tips on how to help @fields.child_nickname think positively about themselves: "
 msgstr ""
 
 #. type=text
@@ -12252,7 +12297,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Press Play ▶️to 5️⃣tips on how to help your {teen} think positively about themselves: "
+msgid "Press Play ▶️to 4️⃣ tips on how to help your {teen} think positively about themselves: "
 msgstr ""
 
 #. type=text
@@ -13800,7 +13845,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "False or true: As a caregiver, I must be strong and not appear sad in front of my children"
+msgid "False or true: As a caregiver, I must be strong and not appear sad in front of my teens"
 msgstr ""
 
 #. type=text
