--- a/translations/facilitator_app_malaysia/en/main.pot
+++ b/translations/facilitator_app_malaysia/en/main.pot
@@ -533,12 +533,17 @@ msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
-msgid "Companion Guide"
+msgid "Programme Overview"
 msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
 msgid "Onboarding Guide"
+msgstr ""
+
+#. type=data_list
+msgctxt "data_list"
+msgid "Closing Guide"
 msgstr ""
 
 #. type=data_list
@@ -759,16 +764,6 @@ msgstr ""
 #. type=data_list
 msgctxt "data_list"
 msgid "Giving consequences"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "Supporting positive child behaviour"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "Keeping the child safe and healthy"
 msgstr ""
 
 #. type=data_list
@@ -1342,22 +1337,6 @@ msgid ""
 "Consequences are most effective when used to support following instructions or household rules and routines that have already been discussed with children.\n"
 "\n"
 "Here are some common challenges and possible solutions for giving consequences.\n"
-"\n"
-"You can share the following messages as responses during your weekly chat when parents share challenges with this topic."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"Here are some common challenges and possible solutions for supporting positive child behaviour. \n"
-"\n"
-"You can share the following messages as responses during your weekly chat when parents share challenges with this topic."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"Here are some common challenges and possible solutions for keeping children safe and healthy. \n"
 "\n"
 "You can share the following messages as responses during your weekly chat when parents share challenges with this topic."
 msgstr ""
@@ -2675,160 +2654,6 @@ msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
-msgid "Other members of the family do not agree about using ignore for tantrums or other demanding behaviours."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"🚩 Sometimes others will not agree with us or have other methods of parenting. \n"
-"\n"
-"💡 It might be helpful to explain to other family members how to use ignore and why it might help reduce your children’s demanding behaviours. \n"
-"\n"
-"✨ You can only control your behaviour so remember that these changes start with you and with time others might see that they really work!"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "I can’t ignore my child’s behaviour because they are hitting/biting/pushing."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"🔑 Ignore only works for negative attention seeking and demanding behaviours like whining, pestering, and tantrums.\n"
-"\n"
-"Using consequences is more effective for aggressive behaviours like hitting. Your child might need a break from an activity to cool down if they are being aggressive. \n"
-"\n"
-"⏸ You can teach them to Take a Pause!"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "I can’t ignore my child’s behaviour because I am afraid they will hurt themselves."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"❗It is important to keep your child safe. If they get out of control during a tantrum, you might need to take them to a place where they cannot hurt themselves. \n"
-"\n"
-"You also might need to gently but firmly hold your child while continuing to ignore them verbally. \n"
-"\n"
-"Remember that we are ignoring the behaviour but not the child!"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "Ignoring the behaviour just seems to make it worse!"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"👀 It is completely natural for your child to test you. They have learned that by increasing their demanding behaviour they might get what they want. \n"
-"\n"
-"💚 Be patient and continue to practise ignoring. Eventually, your child will learn that this behaviour does not work."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "I am having to ignore my child’s behaviour a lot of the time. It just does not work!"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"This may be either because 1️⃣ you are not being consistent with ignoring, 2️⃣ the behaviour is not one that you can ignore, or 3️⃣ your child needs more positive attention at other times. \n"
-"\n"
-"Remember to spend plenty of One-on-One Time with your children."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "My child is always on a gadget, even when I am working or doing house chores."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"📺 It must be exhausting to always tell your child to turn off or put away the gadgets.\n"
-"\n"
-"📝 You can set rules with your child. Tell them that they cannot be on gadgets when you are busy. Your busy time is your child’s quiet play time with toys or reading time with books.\n"
-"\n"
-"🌷 Tell your child that sharing what they watch on T.V. or what they do on gadgets is a rule. \n"
-"\n"
-"👂 Be patient and kind while listening to them. Manage your anger if you find that they did something wrong online. Take a deep breath.\n"
-"\n"
-"💛 Praise your child when they follow the rules!"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "My child is refusing to eat vegetables and fruits, especially when they are out of the house."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"🍅 It is common for children to refuse vegetables and fruits, especially when tastier but less healthy food options are available all around us.\n"
-"\n"
-"🌱 You could encourage your child to eat slightly sweeter fruits and vegetables for a start, such as mango childs and sweet potatoes. You can gradually introduce other vegetables and fruits.\n"
-"\n"
-"🎈 Praise you child even when they take one mouthful of vegetables or fruits!"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "I am worried because my child returns home late at night after playing."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"🚩 I understand it can be unsafe when your child comes home late after playing outside.\n"
-"\n"
-"⏰ Consider establishing a household rule for when your child should come home. Work together with your child to set fair consequences if they don't follow the rule.\n"
-"\n"
-"💚 To support you in setting rules with your child, think about making \"Give My Child Structure\" your next parenting goal once you complete your current one."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "My child told me that school or the house of someone I trust is an unsafe place. 🚩 I was shocked and did not know what to do!"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"😔 It is shocking to learn that people who we trust may cause discomfort to our children.\n"
-"\n"
-"👂 Listen to your child if they want to talk about why it seems dangerous or uncomfortable. Trust what they say - they will not say such things for no reason!\n"
-"\n"
-"🔔 Talk with someone and get support. Type {HELP} if you need more assistance.\n"
-"\n"
-"💙 Remember to take a pause when you are stressed."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid "I am shy to talk to my young child about bodies and safe touch."
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
-msgid ""
-"💙 It is slightly uncomfortable to talk to our children about male and female body parts.\n"
-"\n"
-"💡But it helps to keep our children safe. Your child will know that they can come to you about any questions related to the body.\n"
-"\n"
-"💚 While it may be uncomfortable to talk about some body parts, especially private parts, your child will know how to talk about it if anything happens.\n"
-"\n"
-"🔑 Answer any questions from your child honestly. You can do this to keep our children safe! 🌷"
-msgstr ""
-
-#. type=data_list
-msgctxt "data_list"
 msgid "test"
 msgstr ""
 
@@ -2984,12 +2809,32 @@ msgstr ""
 
 #. type=global
 msgctxt "global"
+msgid "Sign in"
+msgstr ""
+
+#. type=global
+msgctxt "global"
 msgid "Sign in with Google"
 msgstr ""
 
 #. type=global
 msgctxt "global"
+msgid "Sign out"
+msgstr ""
+
+#. type=global
+msgctxt "global"
 msgid "Create an account"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Creating an account allows you to save your progress across devices. It is optional."
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Continue without an account"
 msgstr ""
 
 #. type=global
@@ -3035,6 +2880,16 @@ msgstr ""
 #. type=global
 msgctxt "global"
 msgid "User ID"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Skip"
+msgstr ""
+
+#. type=global
+msgctxt "global"
+msgid "Continue"
 msgstr ""
 
 #. type=global
@@ -3206,130 +3061,6 @@ msgstr ""
 #. type=global
 msgctxt "global"
 msgid "Please enter this Group ID into the onboarding in NKText:"
-msgstr ""
-
-#. type=global
-#. The string @global.app_name should not be translated.
-msgctxt "global"
-msgid ""
-"Welcome to the Naungan Kasih Parenting programme for families with children aged 2–6!\n"
-"\n"
-"@global.app_name is your digital companion, designed to help you deliver the programme and simplify your efforts in providing online support to parents. With this app, you can efficiently deliver weekly content and gather the necessary data easily."
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Before we begin, let’s get you started with a few questions."
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Your Content"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Choose your content package"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Your Role"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Choose your role"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Select role"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Skip"
-msgstr ""
-
-#. type=global
-#. The string @global.app_name! should not be translated.
-msgctxt "global"
-msgid ""
-"Welcome to \n"
-"@global.app_name!"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Sign in"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Creating an account allows you to save your progress across devices. It is optional."
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Continue with Apple"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Continue with Google"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Continue without an account"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "By continuing, you agree to our:"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Sign out"
-msgstr ""
-
-#. type=global
-#. The string @fields._auth_user_given_name! should not be translated.
-msgctxt "global"
-msgid "Welcome back, @fields._auth_user_given_name!"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Welcome back!"
-msgstr ""
-
-#. type=global
-#. The string @fields._auth_user_given_name! should not be translated.
-msgctxt "global"
-msgid "Welcome, @fields._auth_user_given_name!"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Welcome!"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Continue"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "You’re all set!"
-msgstr ""
-
-#. type=global
-msgctxt "global"
-msgid "Your profile is complete, and you’re ready to begin!"
 msgstr ""
 
 #. type=template
