--- a/translations/plh_kids_teens_za/en/main.pot
+++ b/translations/plh_kids_teens_za/en/main.pot
@@ -270,6 +270,11 @@ msgstr ""
 
 #. type=global
 msgctxt "global"
+msgid "This action is permanent and cannot be undone."
+msgstr ""
+
+#. type=global
+msgctxt "global"
 msgid "Yes"
 msgstr ""
 
