Update source file modules_selfcare_t.pot

--- a/translations/plh_kids_teens_za/en/modules_selfcare_t.pot
+++ b/translations/plh_kids_teens_za/en/modules_selfcare_t.pot
@@ -40,9 +40,9 @@ msgid ""
 msgstr ""
 
 #. type=data_list
-#. The string @data.characters.media_female_14.name’s should not be translated.
+#. The string @data.characters.media_male_1.name’s should not be translated.
 msgctxt "data_list"
-msgid "Self care works! Hear @data.characters.media_female_14.name’s story"
+msgid "Self care works! Hear @data.characters.media_male_1.name’s story"
 msgstr ""
 
 #. type=data_list
