Update source file onboarding.pot

--- a/translations/plh_kids_teens_za/en/onboarding.pot
+++ b/translations/plh_kids_teens_za/en/onboarding.pot
@@ -4,7 +4,7 @@ msgstr ""
 
 #. type=data_list
 msgctxt "data_list"
-msgid "Raising teenagers is hard"
+msgid "Bringing teenagers up is hard"
 msgstr ""
 
 #. type=data_list
@@ -78,9 +78,8 @@ msgid "Enter age"
 msgstr ""
 
 #. type=global
-#. The string @global.app_name should not be translated.
 msgctxt "global"
-msgid "@global.app_name only supports parents of children between 2 to 17."
+msgid "Please enter a number between 2 and 17."
 msgstr ""
 
 #. type=global
