--- a/translations/parent_text_v2_malaysia/en/delivery_menu.pot
+++ b/translations/parent_text_v2_malaysia/en/delivery_menu.pot
@@ -486,7 +486,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "To invite someone to join, share this link!"
+msgid "To invite someone to join, share this link and ask them to type {READY} to join!"
 msgstr ""
 
 #. type=text
