Update source file modules_child.pot

--- a/translations/parent_text_v2_malaysia/en/modules_child.pot
+++ b/translations/parent_text_v2_malaysia/en/modules_child.pot
@@ -96,6 +96,11 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid ";"
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "Here is our first one: {F1_DAUGHTER_6} and her mother, {F1_MOTHER}, are playing dress up during one-on-one time. Let’s see how they have fun together."
 msgstr ""
 
@@ -142,11 +147,6 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "You’ve completed 50% of this skill! Press NEXT to continue."
-msgstr ""
-
-#. type=text
-msgctxt "text"
-msgid "I will also provide you with tips that you can use anytime and anywhere!"
 msgstr ""
 
 #. type=text
@@ -221,6 +221,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "3️⃣ STAY - Focus on your child"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "I will also provide you with tips that you can use anytime and anywhere!"
 msgstr ""
 
 #. type=text
@@ -9744,7 +9749,7 @@ msgstr ""
 #. type=text
 #. Strings like @fields.xxx and @results.yyy should not be translated. @results.n_skills_week and results.n_skills are numbers
 msgctxt "text"
-msgid "Amazing job! ⭐ You have now completed @(fields.c_n_mod_compl +1) out of @fields.c_n_mod skills towards your goal, Having a healthy relationship with your spouse 🎉"
+msgid "Amazon job! ⭐ You have now completed @(fields.c_n_mod_compl +1) out of @fields.c_n_mod skills towards your goal, Having a healthy relationship with your spouse 🎉"
 msgstr ""
 
 #. type=text
@@ -10255,6 +10260,18 @@ msgstr ""
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
 msgid "No"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "true"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "false"
 msgstr ""
 
 #. type=quick_replies
