--- a/translations/parent_text_v2_malaysia/en/ltp_activities_child.pot
+++ b/translations/parent_text_v2_malaysia/en/ltp_activities_child.pot
@@ -799,7 +799,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "⚽ Together you can walk, run, play soccer, swim, dance, or do any other sport.."
+msgid "⚽ Together you can walk, run, play soccer, swim, dance, or do any other sport."
 msgstr ""
 
 #. type=text
@@ -965,4 +965,10 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "🏆 If possible, put your child’s picture up on the wall when they are finished. Give praise to your child!"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "NEXT"
 msgstr ""
