Update source file modules_child.pot

--- a/translations/parent_text_v2_malaysia/en/modules_child.pot
+++ b/translations/parent_text_v2_malaysia/en/modules_child.pot
@@ -6243,7 +6243,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "{F1_FATHER}: Either you put away the toys now, or you won’t be able to play with your toys after dinner."
+msgid "{F1_FATHER}: Either you put away the toys now, or you won’t be able to play with your toys after dinner.."
 msgstr ""
 
 #. type=text
@@ -7846,7 +7846,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "👂 Let your child share with you what they need - through words or even by drawing. "
+msgid "👂 Let your child share with you what they need - through words or even by drawing.. "
 msgstr ""
 
 #. type=text
