Update source file delivery_menu.pot

--- a/translations/parent_text_v2_malaysia/en/delivery_menu.pot
+++ b/translations/parent_text_v2_malaysia/en/delivery_menu.pot
@@ -1176,7 +1176,7 @@ msgstr ""
 #. type=text
 #. Strings like @fields.xxx and @results.yyy should not be translated. 
 msgctxt "text"
-msgid "Thanks for participating in @fields.prog_name! Parenting is better with family and friends. To invite them to join @fields.prog_name, share this link and ask them to type {READY} to join! {share_link}"
+msgid "Thanks for participating in @fields.prog_name! Parenting is better with family and friends. To invite them to join, send this link to share @fields.prog_name and ask them to type {READY} to join! {share_link}"
 msgstr ""
 
 #. type=text
