Update source file additional_modules.pot

--- a/translations/parent_text_v2_mexico/en/additional_modules.pot
+++ b/translations/parent_text_v2_mexico/en/additional_modules.pot
@@ -6962,12 +6962,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Press play ▶️ to learn four tips to help you know your role as your girls’ and boys’ caregiver and teach them their role, too: "
-msgstr ""
-
-#. type=text
-msgctxt "text"
-msgid "1️⃣ **KNOW YOUR ROLE**"
+msgid "Press play ▶️ to learn four tips to help you know your role as your girls’ and boys’ caregiver and teach them their role, too: \r\r1️⃣ **KNOW YOUR ROLE**"
 msgstr ""
 
 #. type=text
@@ -6983,11 +6978,6 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "4️⃣ **NOTICE**"
-msgstr ""
-
-#. type=text
-msgctxt "text"
-msgid "Press play ▶️ to learn four tips to help you know your role as your girls’ and boys’ caregiver and teach them their role, too: \r\r1️⃣ **KNOW YOUR ROLE**"
 msgstr ""
 
 #. type=text
@@ -7026,6 +7016,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "If your {child} feels loved and supported at home, they are more likely to do chores happily and to grow into a healthy child and adult! 😃💚"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "1️⃣ **KNOW YOUR ROLE**"
 msgstr ""
 
 #. type=text
@@ -9977,12 +9972,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "Press Play ▶️to learn some things you can do to support your teen when they share something difficult with you:"
-msgstr ""
-
-#. type=text
-msgctxt "text"
-msgid "2️⃣ **LISTEN: Ask your teen what is going on**"
+msgid "Press Play ▶️to learn some things you can do to support your teen when they share something difficult with you:\r\r1️⃣ **BREATHE: Take a pause**\r2️⃣ *LISTEN: Ask your teen what is going on **\r3️⃣ **RESPOND: What might help what is going on?**"
 msgstr ""
 
 #. type=text
@@ -14549,12 +14539,7 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "2️⃣ **WORK TOGETHER**"
-msgstr ""
-
-#. type=text
-msgctxt "text"
-msgid "4️⃣ **ASK FOR SUPPORT**"
+msgid "2️⃣ **WORK TOGETHER**\r3️⃣ **OFFER SUPPORT*\r4️⃣ **ASK FOR SUPPORT**"
 msgstr ""
 
 #. type=text
@@ -14570,6 +14555,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "Give your partner your full attention when you are speaking with them."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "2️⃣ **WORK TOGETHER**"
 msgstr ""
 
 #. type=text
@@ -14590,6 +14580,11 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "It can be as simple as asking, “How can I help?” Try to listen to them and respond in a supportive way."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "4️⃣ **ASK FOR SUPPORT**"
 msgstr ""
 
 #. type=text
