--- a/translations/parent_text_crisis_romania/en/ron_navigation.pot
+++ b/translations/parent_text_crisis_romania/en/ron_navigation.pot
@@ -460,6 +460,16 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "Are you sure you want to DELETE all your info? This will delete your contact and all messages associated with your account. To access this service again you will need to rejoin and start from the beginning."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Please contact {gdpr_contact} for account deletion, for a copy of all of your data we have, or to update any data we have."
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "Your current media setting is Text / Images."
 msgstr ""
 
@@ -809,6 +819,24 @@ msgstr ""
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
+msgid "Request Account Deletion"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "Request User Data"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "Request Account Data Rectification"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
 msgid "Return to Main Menu"
 msgstr ""
 
@@ -822,6 +850,18 @@ msgstr ""
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
 msgid "Change my gender"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "YES - Delete my account"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "NO - I want to keep using {prog_name}"
 msgstr ""
 
 #. type=variables
@@ -1150,6 +1190,24 @@ msgstr ""
 #. type=arguments
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
+msgid "request account deletion"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "request user data"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "request account data rectification"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
 msgid "return to main menu"
 msgstr ""
 
@@ -1163,6 +1221,18 @@ msgstr ""
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
 msgid "change my gender"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "yes - delete my account"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "no - i want to keep using {prog_name}"
 msgstr ""
 
 #. type=arguments
