--- a/translations/parent_text_crisis_romania/en/ron_onboarding.pot
+++ b/translations/parent_text_crisis_romania/en/ron_onboarding.pot
@@ -14,6 +14,21 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "Please select your language:"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "[Other language: please select your language]"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Sorry, I don't understand what you mean."
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "Welcome to {prog_name}. Every parent everywhere needs support. We hope we can help. 💚"
 msgstr ""
 
@@ -54,22 +69,32 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "Are you sure you do not want to get these messages? If you do not want to receive any more messages, please press NO. If you made a mistake, please press BACK and choose another option."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "That's okay. If you decide you want these tips later, type {joining_trigger}."
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "Thank you! To complete this programme, you won’t be alone. You’ll have a parenting guide by your side. There are two supportive parenting experts you can choose from:"
 msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "<avatar description>"
+msgid "Maria is a 38 old mom of 2. She is a child psychotherapist and a school counselor. Both parents and children feel safe to open up to her."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Dan is a 42 years old dad and a dedicated pediatrician. Over the years, he has seen how loving & supportive relationships help children thrive and stay healthy. That's why he teaches parents and talks on podcasts about building strong, caring connections with their kids."
 msgstr ""
 
 #. type=text
 msgctxt "text"
 msgid "Who would you like to be your guide?"
-msgstr ""
-
-#. type=text
-msgctxt "text"
-msgid "Sorry, I don't understand what you mean."
 msgstr ""
 
 #. type=text
@@ -130,6 +155,36 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "To start, you can watch this video to learn about {prog_name}."
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "English"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "Romanian"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "YES"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "NO"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "BACK"
 msgstr ""
 
 #. type=quick_replies
@@ -304,6 +359,42 @@ msgstr ""
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
 msgid "NEXT"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "english"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "romanian"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "yes"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "exit"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "back"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "no"
 msgstr ""
 
 #. type=arguments
