--- a/translations/parent_text_crisis_ukraine/en/ukr_onboarding.pot
+++ b/translations/parent_text_crisis_ukraine/en/ukr_onboarding.pot
@@ -14,6 +14,21 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "Please select your language:"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "[Other language: please select your language]"
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Sorry, I don't understand what you mean."
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "Welcome to {prog_name}. Every parent everywhere needs support. We hope we can help. 💚"
 msgstr ""
 
@@ -54,22 +69,32 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
+msgid "Are you sure you do not want to get these messages? If you do not want to receive any more messages, please press NO. If you made a mistake, please press BACK and choose another option."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "That's okay. If you decide you want these tips later, type {joining_trigger}."
+msgstr ""
+
+#. type=text
+msgctxt "text"
 msgid "Thank you! To complete this programme, you won’t be alone. You’ll have a parenting guide by your side. There are two supportive parenting experts you can choose from:"
 msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "<avatar description>"
+msgid "Maria is a 45-year-old mother and experienced psychological support worker. Her calm voice and wise advice makes parents feel seen, heard, and supported."
+msgstr ""
+
+#. type=text
+msgctxt "text"
+msgid "Mykola is a 52-year-old dad and mental health counsellor. He helps parents manage stress and reconnect with their children using tools that helped him too."
 msgstr ""
 
 #. type=text
 msgctxt "text"
 msgid "Who would you like to be your guide?"
-msgstr ""
-
-#. type=text
-msgctxt "text"
-msgid "Sorry, I don't understand what you mean."
 msgstr ""
 
 #. type=text
@@ -109,11 +134,6 @@ msgstr ""
 
 #. type=text
 msgctxt "text"
-msgid "📍 Where are you located?"
-msgstr ""
-
-#. type=text
-msgctxt "text"
 msgid "What is your current living situation?"
 msgstr ""
 
@@ -130,6 +150,36 @@ msgstr ""
 #. type=text
 msgctxt "text"
 msgid "To start, you can watch this video to learn about {prog_name}."
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "English"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "Ukrainian"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "YES"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "NO"
+msgstr ""
+
+#. type=quick_replies
+#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
+msgctxt "quick_replies"
+msgid "BACK"
 msgstr ""
 
 #. type=quick_replies
@@ -231,18 +281,6 @@ msgstr ""
 #. type=quick_replies
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
-msgid "<loc1>"
-msgstr ""
-
-#. type=quick_replies
-#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
-msgctxt "quick_replies"
-msgid "<loc2>"
-msgstr ""
-
-#. type=quick_replies
-#. This is a quick reply and its translation should be uniquely identified by the corresponding argument
-msgctxt "quick_replies"
 msgid "Living in a camp or shelter"
 msgstr ""
 
@@ -280,6 +318,42 @@ msgstr ""
 #. This is a quick reply and its translation should be uniquely identified by the corresponding argument
 msgctxt "quick_replies"
 msgid "NEXT"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "english"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "ukrainian"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "yes"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "exit"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "back"
+msgstr ""
+
+#. type=arguments
+#. This is an argument and it may be used to identify a corresponding quick reply
+msgctxt "arguments"
+msgid "no"
 msgstr ""
 
 #. type=arguments
@@ -376,18 +450,6 @@ msgstr ""
 #. This is an argument and it may be used to identify a corresponding quick reply
 msgctxt "arguments"
 msgid "i do not want the tips"
-msgstr ""
-
-#. type=arguments
-#. This is an argument and it may be used to identify a corresponding quick reply
-msgctxt "arguments"
-msgid "<loc1>"
-msgstr ""
-
-#. type=arguments
-#. This is an argument and it may be used to identify a corresponding quick reply
-msgctxt "arguments"
-msgid "<loc2>"
 msgstr ""
 
 #. type=arguments
